# project-based-terminal-manager

./: .gitignore  .release-please-manifest.json  AGENTS.md  GEMINI.md  ProjectWindowManager.slnx  README.md  TerminalWindowManager.slnx  build.ps1  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
.specify/memory/: constitution.md
docs/analysis/: project-manager-for-terminal.md
docs/architecture/: system-architecture.md
docs/bugs/001-hoisting/: bug.md
docs/inspiration/: windows-terminal.md
specs/001-project-window-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/ProjectWindowManager.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NullToVisibilityConverter.cs  ProjectWindowManager.App.csproj
src/ProjectWindowManager.Win32/: ProjectWindowManager.Win32.csproj  WindowManagerService.cs
src/TerminalWindowManager.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RelayCommand.cs  TerminalWindowManager.App.csproj
src/TerminalWindowManager.ConPTYHost/: CommandLineOptions.cs  ConPtySession.cs  ControlMessage.cs  Program.cs  ShellPathResolver.cs  TerminalWindowManager.ConPTYHost.csproj
src/TerminalWindowManager.ElectroBun/: CHANGELOG.md  electrobun.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src/TerminalWindowManager.Tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/TerminalWindowManager.Tauri/src-tauri/permissions/: app-commands.toml
src/TerminalWindowManager.Tauri/src-tauri/src/: backend.rs  diagnostics.rs  lib.rs  main.rs  models.rs
(+94 files in other folders)
